[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemies/Necromancer.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Utlilty Scenes/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Utlilty Scenes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Utlilty Scenes/Hitbox.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30.5, 29 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31, 29 )

[sub_resource type="CircleShape2D" id=5]
radius = 281.78

[node name="Necromancer" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.972549, 0.12549, 0.12549, 1 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
scale = Vector2( 0.8, 0.8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.5, 0 )
shape = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
scale = Vector2( 0.8, 0.8 )
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1, 1 )
shape = SubResource( 4 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -21.0
margin_top = -44.0
margin_right = 19.0
margin_bottom = -25.0

[node name="Node2D" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Node2D"]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
